--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>	
         </div>
 
-        <div id="footer">Atiya Rahman - Music/Henna/Art</div>
+        <div id="footer">Atiya Rahman</div>
         
 		<script
 		  	src="http://code.jquery.com/jquery-3.1.1.min.js"
